--- a/RestExemplo-web/src/main/webapp/index.html
+++ b/RestExemplo-web/src/main/webapp/index.html
@@ -19,45 +19,7 @@
 
     </div>
 
-    <div id="dados" class="container-fluid">
-
-        <form class="form-horizontal">
-        <div class="row-fluid">
-        <div class="form-group">
-        <div class="control-group">
-            <label class="col-sm-1 control-label" for="nomeCliente">
-                Nome:
-            </label>
-            <div class="col-sm-3">
-                <input type="text"  id="nomeCliente" class="input-sm form-control"/>
-            </div>
-        </div>
-        <div class="control-group">
-            <label class="col-sm-1 control-label" for="sobrenomeCliente">
-                Sobrenome:
-            </label>
-            <div class="col-sm-7">
-                <input type="text"  id="sobrenomeCliente" class="input-sm form-control"/>
-            </div>
-        </div>
-        </div>
-        <div class="form-group">
-            <div class="control-group">
-            <label class="col-sm-1 control-label" for="idadeCliente">
-                Idade:
-            </label>
-            <div class="col-sm-3">
-                <input type="number"  id="idadeCliente" class="input-sm form-control"/>
-            </div>
-        </div>
-        </div>
-    </div>
-    <div class="container">
-        <button type="button" id="btnAlterar" class="btn btn-secundary" style="display: none" title="Alterar">Alterar</button>
-		<button type="button" id="btnSalvar" class="btn btn-primary" title="Salvar" >Salvar</button>
-    </div>
-</form>
-    </div>
+    <div id="dados" class="container-fluid"></div>
 
     <footer class="navbar-fixed-bottom">
         <div class="container-fluid">
@@ -73,6 +35,7 @@
 
     <script type="text/javascript" src="model/ClienteModel.js"></script>
     <script type="text/javascript" src="view/ClienteView.js"></script>
+    <script type="text/javascript" src="view/ClienteListView.js"></script>
 </body>
 
 </html>
