--- a/RestExemplo-web/src/main/webapp/index.html
+++ b/RestExemplo-web/src/main/webapp/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/jquery.dataTables.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,6 +30,7 @@
         </div>
     </footer>
     <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/jquery.dataTables.min.js"></script>
     <script src="js/bootstrap-3.3.7.min.js"></script>
     <script src="js/underscore-1.8.3.js"></script>
     <script src="js/backbone-min.js"></script>
